# pyope

./: .gitignore  .opencode-session  CLAUDE.md  LATEX_DISPLAY_GUIDE.md  OPERATOR_SORTING_DESIGN.md  OPEconf.m  OPEdefs_Analysis.md  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  [Nishinaka, Tachikawa] On 4d rank-one N =3 superconformal field theories-chiralAlgebra.nb  [Thielemans] An Algorithmic Approach to Operator Product Expansions, W-Algebras and W-Strings.md  demo_derivative_expansion.py  doc31.aux  pyope_demo.ipynb  pyproject.toml  screening.nb  test_derivative_expansion_notebook.py
.claude/agents/: jupyter-notebook-creator.md  test-generator-voa.md
.claude/skills/voa/: SKILL.md
.claude/skills/voa/computations/: D4 to trifundamental free hyper.nb  [Nishinaka, Tachikawa] On 4d rank-one N =3 superconformal field theories-chiralAlgebra.wls  compare_results.wls  compare_results_v2.wls  debug_complete.wls  debug_genop.wls  debug_partitions.wls  final_comparison.wls  null_states.txt  null_states.wls  test_level3.wls  test_level5.wls  test_null_states.wls  test_null_states_v2.wls  test_null_states_v3.wls  test_null_states_v4.wls  test_null_states_v5.wls  test_original.wls  test_original_v2.wls  test_result.wls  test_with_packages.wls
.claude/skills/voa/manual/: OPEdefs-manual.md  VOA-manual.md  voa-examples.md
OPEdefs/: Delta.nb  Dummies.m  Dummies.nb  OPEconf.nb  OPEdefs.nb  SOPEN2defs.m  doc31.tex  ope-examples.nb
demo/: JACOBI_DEMO_SUMMARY.md  jacobi_identity_demo.ipynb  latex_rendering_demo.ipynb  mathematica_comparison.ipynb  null_states_demo.ipynb  pyope_basic_demo.ipynb  pyope_ope_demo.ipynb  w_algebra_null_states_demo.ipynb
docs/: level4_enumeration_analysis.md  level4_fix_summary.md  mgroupstates_implementation.md
papers/: [Bonetti, Meneghelli, Rastelli] VOAs labelled by complex reflection groups and 4d SCFTs.md
pyope/: LOCAL_OPERATOR_REFACTOR.md  README.md  TEST_RESULTS_REPORT.md  latex_display_example.ipynb  pyope_demo.ipynb  pyproject.toml  test_thielemans_eqs.py
pyope/examples/: basic_usage.py
pyope/pyope/: __init__.py  api.py  constants.py  ope_data.py  operators.py
pyope/pyope.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pyope/tests/: test_ope_data.py  test_operator.py
src/: __init__.py  constants.py  local_operator.py  ope_data.py  registry.py
src/pyope/: __init__.py  api.py  cache.py  constants.py  jacobi.py  local_operator.py  null_states.py  ope_data.py  operators.py  registry.py  simplify.py
tests/: COMPLETE_FIX_SUMMARY.md  JACOBI_IDENTITY_TEST.md  JACOBI_README.md  JACOBI_TEST_REPORT.md  JACOBI_TEST_SUMMARY.md  NULL_STATES_TEST_ISSUES.md  OPEdefs_Analysis.md  STATISTICS_FIX_SUMMARY.md  SUPERCONFORMAL_JACOBI_TEST.md  SUPERCONFORMAL_OPE_CORRECTION.md  TEST_INDEX.md  W3_ALGEBRA_TESTS.md  __init__.py  benchmark_performance.py  compare_enumeration_methods.py  conftest.py  debug_all_operators.py  debug_quantum_numbers.py  debug_quantum_simple.py  ref_j0_ope_test.wls  ref_jacobi_superconformal.wls  ref_jacobi_superconformal_output.json  ref_jacobi_virasoro.wls  ref_simple_ope_test.wls  ref_z3_w_algebra_opes.wls  ref_z3_w_algebra_opes_output.json  test_advanced_ope.py  test_api.py  test_bracket_n0.py  test_composite_left_ope.py  test_composite_left_signs.py  test_conformal_weight.py  test_constants.py  test_derivative_ope_fix.py  test_fermion_sign_bug.py  test_fermion_subtleties.py  test_free_field_systems.py  test_jacobi_superconformal.py  test_jacobi_virasoro.py  test_level4_verification.py  (+19 more)
tests/backup_20260117_221641/: test_null_states_stage2.py
